@@ -2,8 +2,6 @@
 TODO list for project TTCut (04/27/2007)
 -------------------------------------------------------------------------------
 
-* Read all audiofiles for a given videofile, use the ProjectX naming 
-  convention for audio names
 * Enable single audio cut
 * Enable free diskspace info in cut dialog
 * Implement WriteMaxBitrate in cut dialog
